# Projet-recherche-de-fichiers-par-mots-cl-s

./: README.md  config.json  favorites.json  favorites.py  history.py  indexer.py  main.py  reader.py  scanner.py  search.py
data/: Hitman.docx  bilan.xlsx  employes.csv  hitman.txt  instructions.docx  plan.txt  rapport.docx  rapport.txt  ventes.csv
data/Agilité Scrum/: Contrôle continu .docx  User Story.docx
data/Algorithmie Avancé python/TELENA-Marc_TP1_Python/: main.py  tpx_1.py  tpx_2.py  tpx_3.py  tpx_4.py  tpx_5.py  tpx_6.py
data/Algorithmie Avancé python/TP1/: main.py  tp1-1.py  tp1-2.py  tp1-3.py  tp1-4.py
data/Anglais/: Exercices.txt
data/Base de données/: Cours 26-09-2024.docx  Database.drawio  MCD.drawio
data/Base de données/Rendu/: TELENA_Marc_ESGI3_Base_de _données.md
data/Cloud Day/: Cloud Day.docx
data/Docker/: 03 - TP images_ volumes et réseaux.html
data/Entreprise/: Projet.docx
data/Language Python/: 01 - Introduction à Python et Poetry.html  01 - Syntaxe Python par l'exemple.py  01 - TD créer une application Textual pour Docker.html  02 - Exercices scripting.html  Cours.docx  TP à rendre.txt
data/Language Python/live_poetry/: pyproject.toml
data/Language Python/tp1/: main.py  pyproject.toml  ui.py
data/Linux Avancé/: Cours.docx  Projet.txt
data/Palermo/: Contact.docx
data/Scripting Shell/: Cours.docx
index/: favorites.json  history.json  index.json
static/: favorites.css  index.css  results.css  style.css
templates/: favorites.html  history.html  index.html  results.html
(+7 files in other folders)
