[tool.poetry]
name = "tp1"
version = "0.1.0"
description = "TP1"
authors = ["Marc TELENA <marc.telena@outlook.fr>"]
license = "MT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.89.1"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
